src/objects/Trainer__c.object
<CustomObject>
    <description>Object for managing which trainers (users) are capable of teaching which courses (products)</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If ticked the trainer is still an active user, un-tick if no longer active</description>
        <inlineHelpText>If ticked the trainer is still an active user, un-tick if no longer active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <description>Used by logistics to determine the level of use a trainer is to the company.</description>
        <inlineHelpText>Green = Use with confidence
Amber = Use if no others available
Red = Use only in dire emergency</inlineHelpText>
        <label>Class</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Day_Rate__c</fullName>
        <description>Trainer&apos;s Day Rate, only needs to be entered if different from Day Rate specified on the Product</description>
        <inlineHelpText>Trainer&apos;s Day Rate, only needs to be entered if different from Day Rate specified on the Product</inlineHelpText>
        <label>Day Rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The trainer is linked to this product if they can deliver the training for it.</description>
        <inlineHelpText>The trainer is linked to this product if they can deliver the training for it.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Trainers</relationshipLabel>
        <relationshipName>Trainers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trainer_Name__c</fullName>
        <description>This is the full name of the related user (trainer/auditor)</description>
        <formula>User__r.FirstName +&quot; &quot;+ User__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the full name of the related user (trainer/auditor)</inlineHelpText>
        <label>Trainer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the lookup to the user who is related to the trainer record.</description>
        <inlineHelpText>This is the lookup to the user who is related to the trainer record.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Trainers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Trainer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Class__c</columns>
        <columns>Active__c</columns>
        <columns>Product__c</columns>
        <columns>Day_Rate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Trainer_Name__c</field>
            <operation>contains</operation>
            <value>exam</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{0000000}</displayFormat>
        <label>Trainer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trainers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>